--- a/styles.css
+++ b/styles.css
@@ -35,10 +35,13 @@ h2 {
 
 p {
   font-size: 14px;
+  overflow-wrap: break-word;
 }
 
 #dateArea {
   display: flex;
+
+  margin-bottom: 20px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -98,7 +101,7 @@ li {
 
 #save-button {
   text-align: center;
-  margin-left: 300px;
+  margin-left: 270px;
   padding: 15px 35px;
   font-size: 16px;
   cursor: pointer;
