--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Tangerine;
+  src: url("https://fonts.googleapis.com/css?family=Tangerine");
+}
+
 * {
   box-sizing: border-box;
   background-color: lightgrey;
@@ -25,6 +30,12 @@ body {
   align-items: center;
   min-height: 100vh;
   color: #202020;
+}
+
+#mainHeadingText {
+  font-size: 48px;
+  text-align: center;
+  font-family: Snell Roundhand, cursive;
 }
 
 h2 {
